added scrape py

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "######################################################################################\n",
     "#  RUT-SOM-DATA-PT-06-2020-U-C                                          Douglas High #\n",
-    "#   Web Scrapinf Challenge                                           August 31, 2020 #\n",
+    "#   Web Scraping Challenge                                           August 31, 2020 #\n",
     "#      >mission_to_mars                                                              #\n",
     "#   - use chromedriver, splinter, beautiful soup, and pandas to scrape data from     #\n",
     "#     various Nasa websites.                                                         #\n",
