--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -12,6 +12,9 @@
     "#     various Nasa websites.                                                         #\n",
     "#   - a wait time of 3 seconds is used for each url call to ensure full data         #\n",
     "#      during slow internet.  variable 'w' can be changed as needed.                 #\n",
+    "#  *- 5/2021 - git repo and local folder name changed to NASA-Web-Scraping, no code  #\n",
+    "#              changes made, however, featured image page has changed, code needs    #\n",
+    "#              to be modified.                                                       #\n",
     "######################################################################################"
    ]
   },
